Thu Mar 27 17:19:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_setparam.c:
	- remove some warnings

Thu Mar 27 17:04:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- namespace cleanup
	- fix core accessing freed memory
	- fix memory leak

Thu Mar 27 11:00:49 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/error.c:
	* src/odbc/unittests/common.c:
	* src/odbc/unittests/connect.c:
	* src/odbc/unittests/date.c src/odbc/unittests/print.c:
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/t0003.c src/odbc/unittests/t0004.c:
	- indented

Thu Mar 27 10:37:33 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/array_bind.c :
	* src/ctlib/unittests/connect_fail.c:
	* src/ctlib/unittests/cs_diag.c:
	* src/ctlib/unittests/rpc_ct_param.c:
	- remove some warnings

Thu Mar 27 01:30:27 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c Patch #699749 by Craig A. Berry, add ":r"
	* include/tds.h added declaration
	* src/dblib/bcp.c removed minor warning
	* doc/Makefile.am fixed installation prefix
	* include/cspublic.h src/ctlib/cs.c
	* src/ctlib/unittests/Makefile.am
	* src/ctlib/unittests/cs_diag.c
	* src/ctlib/unittests/get_send_data.c
	- Patch #709919 by Suhasini Sriramulu

Thu Mar 27 07:57:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/.indent.pro: change after ML discussion

Wed Mar 26 22:16:31 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c: fix core if compiled with iODBC
	* src/tds/iconv.c:
	- add code to change iconv on mssql using collation info

Wed Mar 26 17:18:58 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: small update
	* include/tdsiconv.h src/tds/iconv.c src/tds/mem.c:
	- remove some iconv handle
	- start adding conversion for single-byte characters
	* src/tds/config.c: small log change
	* src/tds/read.c: doc update
